{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 21,
  "lineage": "2bea69e7-72b0-5af7-ebcf-096f303f1a42",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/natGateways/nat-41fc64",
            "idle_timeout_in_minutes": 4,
            "location": "southeastasia",
            "name": "nat-41fc64",
            "resource_group_name": "tf-rg-southeastasia",
            "resource_guid": "d5000655-0987-42c7-834a-e8537dc09189",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat_ip_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/natGateways/nat-41fc64|/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/publicIPAddresses/nat-pip-41fc64",
            "nat_gateway_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/natGateways/nat-41fc64",
            "public_ip_address_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/publicIPAddresses/nat-pip-41fc64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat",
            "azurerm_public_ip.nat_pip",
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/networkInterfaces/nic-private-41fc64",
            "internal_domain_name_suffix": "4b0mp1bcw3fu3lqmgkg42bavcf.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.10.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-private"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southeastasia",
            "name": "nic-private-41fc64",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "tf-rg-southeastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/networkInterfaces/nic-public-41fc64",
            "internal_domain_name_suffix": "4b0mp1bcw3fu3lqmgkg42bavcf.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/publicIPAddresses/pip-41fc64",
                "subnet_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-public"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southeastasia",
            "name": "nic-public-41fc64",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "tf-rg-southeastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/networkSecurityGroups/nsg-public-41fc64",
            "location": "southeastasia",
            "name": "nsg-public-41fc64",
            "resource_group_name": "tf-rg-southeastasia",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/networkSecurityGroups/nsg-public-41fc64/securityRules/Allow-HTTP-80",
            "name": "Allow-HTTP-80",
            "network_security_group_name": "nsg-public-41fc64",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-southeastasia",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/networkSecurityGroups/nsg-public-41fc64/securityRules/Allow-SSH-From-MyIP",
            "name": "Allow-SSH-From-MyIP",
            "network_security_group_name": "nsg-public-41fc64",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "tf-rg-southeastasia",
            "source_address_prefix": "14.97.164.46/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/publicIPAddresses/nat-pip-41fc64",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.193.190.98",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "nat-pip-41fc64",
            "resource_group_name": "tf-rg-southeastasia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/publicIPAddresses/pip-41fc64",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.194.151.187",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "pip-41fc64",
            "resource_group_name": "tf-rg-southeastasia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-private",
            "name": "snet-private",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-rg-southeastasia",
            "virtual_network_name": "vnet-41fc64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-public",
            "name": "snet-public",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-rg-southeastasia",
            "virtual_network_name": "vnet-41fc64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "private_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-private",
            "nat_gateway_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/natGateways/nat-41fc64",
            "subnet_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-private"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-public",
            "network_security_group_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/networkSecurityGroups/nsg-public-41fc64",
            "subnet_id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64/subnets/snet-public"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ecc774f0-b722-4e4b-ae0c-328dee041515",
            "id": "/subscriptions/cc4b8a98-541c-41a9-a9b0-c6881f0e1db1/resourceGroups/tf-rg-southeastasia/providers/Microsoft.Network/virtualNetworks/vnet-41fc64",
            "location": "southeastasia",
            "name": "vnet-41fc64",
            "resource_group_name": "tf-rg-southeastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_id.suffix"
          ]
        }
      ]
    }
  ]
}